--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
 DATABASE_USER=postgres
 DATABASE_HOST=localhost
 DATABASE_DATABASE=battleship
-DATABASE_PASSWORD=
+DATABASE_PASSWORD=123456
 DATABASE_PORT=5432
