--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,12 @@
   "name": "battleship",
   "version": "1.0.0",
   "description": "Projeto funcional do clássico jogo Batalha naval em Javascript.",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "fs": "^0.0.1-security",
-    "pg": "^8.14.0"
+    "nodemon": "^3.1.9",
+    "pg": "^8.14.1"
   }
 }
