--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ node_modules
 /backend/node_modules
 /backend/.env
 /.vscode
+backend/package-lock.json
+backend/dotenv
+backend/package-lock.json
+backend/.env.example
